# voice-changer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: diagnostic-runtime.ps1
scripts/neural/: capture_source_voice.ps1  capture_source_voice.py  infer_tiny_vc.py  prepare_dataset.py  requirements.txt  run_train_gpu.ps1  train_tiny_vc.py
src/ai/: IVoiceConverter.h  LocalVoiceConverter.cpp  LocalVoiceConverter.h  ONNXVoiceConverter.cpp  ONNXVoiceConverter.h
src/app/: Preset.h  main.cpp
src/audio/: DeviceUtils.cpp  DeviceUtils.h  WasapiCapture.cpp  WasapiCapture.h  WasapiRender.cpp  WasapiRender.h
src/core/: AudioStats.h  AudioTypes.h  PresetManager.cpp  PresetManager.h  RingBuffer.cpp  RingBuffer.h
src/dsp/: Biquad.cpp  Biquad.h  EQEffect.cpp  EQEffect.h  EffectChain.h  GainEffect.cpp  GainEffect.h  IEffect.h  PitchShiftEffect.cpp  PitchShiftEffect.h  SoftClipperEffect.cpp  SoftClipperEffect.h  VoiceConverterEffect.cpp  VoiceConverterEffect.h
src/ui/: main.cpp
tests/: main.cpp  test_biquad.cpp  test_eqeffect.cpp  test_onnx_preset.cpp  test_pitchshift.cpp  test_ringbuffer.cpp  test_voice_converter.cpp
